--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Swiss Aid Connect Foundation</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 <style>
 :root{ 
   --blue:#0b61b6;
@@ -14,6 +16,17 @@
   --side-nav-height:48px;
   --max-width:1180px;
 }
+
+/* Apply Poppins to the whole site */
+body, * {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600; /* bold but not too heavy */
+}
+
+
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{
   height:100%;
@@ -579,111 +592,116 @@ footer.site-footer{
 
 
 
-
-
-
-
-
-
 /* ===== Mobile menu dots & responsive behavior ===== */
 
-/* Dot menu buttons (hidden by default) */
+/* Dot menu buttons (hidden by default on desktop) */
 .mobile-dots {
-  display:none;
-  gap:10px;
-  align-items:center;
+  display: none;
+  align-items: center;
 }
 
 /* Single dot button style */
 .dot-btn {
-  width:42px;
-  height:42px;
-  border-radius:10px;
-  background:transparent;
-  border:none;
-  display:inline-grid;
-  place-items:center;
-  cursor:pointer;
-  font-size:22px;
-  color:var(--blue);
-  margin-left:8px;
+  width: 42px;
+  height: 42px;
+  border-radius: 10px;
+  background: transparent;
+  border: none;
+  display: inline-grid;
+  place-items: center;
+  cursor: pointer;
+  font-size: 22px;
+  color: var(--blue);
 }
 
-/* larger visible 3-dot glyph inside button */
+/* three-dot glyph */
 .dot-btn .dots {
-  display:block;
-  line-height:1;
-  font-weight:800;
-  transform:translateY(-1px);
+  display: block;
+  line-height: 1;
+  font-weight: 800;
+  transform: translateY(-1px);
 }
 
-/* Slide-down mobile menu panel */
+/* Slide-down mobile panel */
 .mobile-panel {
-  position:fixed;
-  top:calc(var(--utility-height) + var(--nav-height));
-  left:0;
-  right:0;
-  background:#fff;
-  box-shadow:0 10px 30px rgba(0,0,0,0.12);
-  border-bottom:1px solid rgba(0,0,0,0.06);
-  z-index:120;
-  transform-origin:top center;
-  transform:translateY(-12px) scaleY(.98);
-  opacity:0;
-  pointer-events:none;
-  transition:transform .28s cubic-bezier(.2,.9,.25,1), opacity .28s ease;
-  max-height:60vh;
-  overflow:auto;
+  position: fixed;
+  top: calc(var(--utility-height) + var(--nav-height));
+  left: 0;
+  right: 0;
+  background: #fff;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+  border-bottom: 1px solid rgba(0,0,0,0.06);
+  z-index: 120;
+  transform-origin: top center;
+  transform: translateY(-12px) scaleY(.98);
+  opacity: 0;
+  pointer-events: none;
+  transition: transform .28s cubic-bezier(.2,.9,.25,1), opacity .28s ease;
+  max-height: 60vh;
+  overflow: auto;
 }
 
 /* visible state */
 .mobile-panel.open {
-  transform:translateY(0) scaleY(1);
-  opacity:1;
-  pointer-events:auto;
+  transform: translateY(0) scaleY(1);
+  opacity: 1;
+  pointer-events: auto;
 }
 
-/* menu list inside panel */
+/* menu links inside panel */
 .mobile-panel .panel-inner {
-  padding:12px 18px;
+  padding: 12px 18px;
 }
 
-/* style for cloned links */
 .mobile-panel .panel-inner a {
-  display:block;
-  padding:10px 12px;
-  border-radius:8px;
-  text-decoration:none;
-  color:#111;
-  font-weight:600;
-  margin:6px 0;
+  display: block;
+  padding: 10px 12px;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #111;
+  font-weight: 600;
+  margin: 6px 0;
 }
+
 .mobile-panel .panel-inner a:hover {
-  background:rgba(11,97,182,0.06);
+  background: rgba(11,97,182,0.06);
 }
 
 /* ===== Mobile Responsive Rules ===== */
-
 @media (max-width:880px) {
 
-  /* hide original navs */
-  .top-nav { display:none !important; }
-  .side-nav-container { display:none !important; }
+  /* hide desktop navs */
+  .top-nav, .side-nav-container { display: none !important; }
 
   /* show ⋮ button */
-  .mobile-dots { display:flex; }
+  .mobile-dots { display: flex; }
 
-  /* adjust header */
+  /* header flex: brand left, buttons+dots right */
   .site-header {
-    padding:8px 14px;
-    height:var(--nav-height);
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 14px;
+    height: var(--nav-height);
+  }
+
+  /* group nav-actions + dot */
+  .nav-actions {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  /* move dot button to right of Join/Donate buttons */
+  .mobile-dots {
+    order: 2; /* ensures it comes after nav-actions */
   }
 
   /* brand adjustments */
-  .brand img { height:44px; }
-  .brand h1 { font-size:18px; }
+  .brand img { height: 44px; }
+  .brand h1 { font-size: 18px; }
 
-  /* hero no longer pushed down too far */
+  /* hero margin */
   .hero-wrap {
     margin-top: calc(var(--utility-height) + var(--nav-height));
   }
@@ -692,19 +710,15 @@ footer.site-footer{
 /* extra small phones */
 @media (max-width:520px) {
   .dot-btn {
-    width:44px;
-    height:44px;
-    font-size:24px;
-    border-radius:10px;
+    width: 44px;
+    height: 44px;
+    font-size: 24px;
+    border-radius: 10px;
   }
   .mobile-panel .panel-inner {
-    padding:10px 14px;
+    padding: 10px 14px;
   }
 }
-
-
-
-
 
 
 
@@ -722,26 +736,28 @@ footer.site-footer{
   <a href="#">EN</a>
 </div>
 
-
 <!-- Main Header -->
 <header>
   <div class="site-header" role="banner">
+    <!-- Logo + NGO Name -->
     <div class="brand">
       <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763381089/WhatsApp_Image_2025-11-17_at_9.22.25_AM_c17ghd.jpg" alt="swisslogo" />
       <h1>Swiss Aid Connect Foundation</h1>
     </div>
 
-    <!-- ⭐ SINGLE MOBILE DOT BUTTON -->
-    <div class="mobile-dots">
-      <button class="dot-btn" id="btnMenu" aria-haspopup="true" aria-controls="mobileMenu" aria-expanded="false">
-        <span class="dots">⋮</span>
-      </button>
-    </div>
-    <!-- ⭐ END dot button -->
+    <!-- Right side: Join/Donate + Mobile Dots -->
+    <div class="header-right">
+      <div class="nav-actions">
+        <a class="btn btn-join" href="#">Join</a>
+        <a class="btn btn-donate" href="#">Donate</a>
+      </div>
 
-    <div class="nav-actions">
-      <a class="btn btn-join" href="#">Join</a>
-      <a class="btn btn-donate" href="#">Donate</a>
+      <!-- Mobile Dot Button -->
+      <div class="mobile-dots">
+        <button class="dot-btn" id="btnMenu" aria-haspopup="true" aria-controls="mobileMenu" aria-expanded="false">
+          <span class="dots">⋮</span>
+        </button>
+      </div>
     </div>
   </div>
 
@@ -756,10 +772,11 @@ footer.site-footer{
   </div>
 </header>
 
-<!-- ⭐ SINGLE MOBILE MENU PANEL -->
+<!-- Mobile Menu Panel -->
 <div id="mobileMenu" class="mobile-panel" aria-hidden="true" role="menu">
   <div class="panel-inner" id="mobileMenuInner"></div>
 </div>
+
 
 
 <main>
@@ -784,6 +801,8 @@ footer.site-footer{
     </div>
   </section>
 </main>
+
+
 
 
 
@@ -1071,6 +1090,29 @@ footer.site-footer{
 </footer>
 
 <script>
+
+document.addEventListener("DOMContentLoaded", () => {
+  const btn = document.getElementById("btnMenu");
+  const panel = document.getElementById("mobileMenu");
+  const panelInner = document.getElementById("mobileMenuInner");
+
+  // Clone top-nav and side-nav links into mobile panel (exclude Join/Donate)
+  const utilityLinks = document.querySelectorAll(".top-nav a");
+  const sideLinks = document.querySelectorAll(".side-nav a");
+
+  utilityLinks.forEach(a => panelInner.appendChild(a.cloneNode(true)));
+  sideLinks.forEach(a => panelInner.appendChild(a.cloneNode(true)));
+
+  // Toggle mobile panel
+  btn.addEventListener("click", () => {
+    panel.classList.toggle("open");
+  });
+});
+
+
+
+
+
 document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 
