--- a/index.html
+++ b/index.html
@@ -587,128 +587,102 @@ footer.site-footer{
 .ft { color:#fff;text-decoration:none;font-size:15px; }
   .ft:hover { text-decoration:underline; }
 
-/* ===== Mobile menu dots & responsive behavior ===== */
-
-.mobile-dots {
-  display: none;
-  align-items: center;
-}
-
-.dot-btn {
-  width: 36px;
-  height: 36px;
-  border-radius: 8px;
-  background: transparent;
-  border: none;
-  display: grid;
-  place-items: center;
-  cursor: pointer;
-  font-size: 22px;
-  color: var(--blue);
-}
-
-.dot-btn .dots {
-  line-height: 1;
-  font-weight: 800;
-}
-
-/* Slide-down panel */
-.mobile-panel {
-  position: fixed;
-  top: calc(var(--utility-height) + var(--nav-height));
-  left: 0;
-  right: 0;
-  background: #fff;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.12);
-  border-bottom: 1px solid rgba(0,0,0,0.06);
-  z-index: 120;
-  transform-origin: top center;
-  transform: translateY(-12px) scaleY(.98);
-  opacity: 0;
-  pointer-events: none;
-  transition: transform .28s cubic-bezier(.2,.9,.25,1), opacity .28s ease;
-  max-height: 60vh;
-  overflow-y: auto;
-}
-
-.mobile-panel.open {
-  transform: translateY(0) scaleY(1);
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.mobile-panel .panel-inner {
-  padding: 12px 18px;
-}
-
 /* ======================================== */
-/* MOBILE HEADER — EXACT LIONS LAYOUT */
+/* MOBILE HEADER — EXACT SAME FORMAT AS LIONS */
 /* ======================================== */
-@media (max-width:880px) {
 
-  /* Hide desktop nav */
-  .top-nav, 
-  .side-nav-container { display: none !important; }
+@media (max-width: 880px) {
 
-  /* HEADER becomes 2 rows */
+  /* Hide desktop elements */
+  .top-nav,
+  .side-nav-container {
+    display: none !important;
+  }
+
+  /* Entire header container (3 rows) */
   .site-header {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 12px 16px;
+    padding: 14px 16px;
     background: #fff;
-    gap: 12px;
+    gap: 14px;
+    width: 100%;
   }
 
-  /* ROW 1 — Logo + Title + ⋮ on the same row */
+  /* Row 1 — Logo + Title */
   .brand {
     display: flex;
     align-items: center;
     gap: 12px;
-    width: 100%;
-  }
-
-  /* Put ⋮ on the far right of row 1 */
-  .mobile-dots {
-    display: flex;
-    margin-left: auto;
   }
 
   .brand img {
-    height: 46px;
+    height: 50px;               /* matches Lions */
   }
 
   .brand h1 {
-    font-size: 18px;
-    line-height: 1.1;
+    font-size: 19px;            /* same visual size */
+    line-height: 1.15;
     font-weight: 700;
-    max-width: 140px;
+    max-width: 150px;           /* forces the 2-line text */
+    margin: 0;
   }
 
-  /* ROW 2 — Buttons normal size */
+  /* Row 2 — Join + Donate */
   .nav-actions {
     display: flex;
-    gap: 8px;
+    gap: 10px;
     width: 100%;
   }
 
   .nav-actions a {
     flex: 1;
-    padding: 8px 0;     /* FIX: reduce button size */
-    font-size: 14px;    /* FIX: reduce text size */
+    padding: 10px 0;
+    text-align: center;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .btn-join {
+    background: #0055d4;   /* Lions blue */
+    color: white;
+  }
+
+  .btn-donate {
+    background: #f7c600;   /* Lions yellow */
+    color: black;
+  }
+
+  /* Row 3 — 3-dot menu */
+  .mobile-dots {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+
+  .dot-btn {
+    width: 42px;
+    height: 42px;
+    display: grid;
+    place-items: center;
+    border: none;
+    background: transparent;
+    font-size: 30px;
+    font-weight: 900;
+    cursor: pointer;
+  }
+
+  .dot-btn .dots {
+    transform: translateY(-3px);
   }
 }
 
-/* Extra small screens */
-@media (max-width:520px) {
+/* Extra small phones */
+@media (max-width: 520px) {
   .brand h1 {
     font-size: 17px;
     max-width: 120px;
-  }
-
-  .nav-actions a {
-    padding: 7px 0;
-    font-size: 13px;
   }
 }
 
@@ -724,21 +698,20 @@ footer.site-footer{
   <a href="#">Find a Club</a>
   <a href="#">EN</a>
 </div>
+
 <!-- Main Header -->
 <header>
   <div class="site-header" role="banner">
 
-    <!-- Row 1: Logo + Title + ⋮ -->
+    <!-- Row 1: Logo + Two-line Title -->
     <div class="brand">
-      <img src="YOUR-LOGO" alt="swisslogo">
-      <h1>Swiss Aid Connect<br>Foundation</h1>
+      <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763381089/WhatsApp_Image_2025-11-17_at_9.22.25_AM_c17ghd.jpg" alt="swisslogo" />
 
-      <!-- 3 dots on the same row -->
-      <div class="mobile-dots">
-        <button class="dot-btn" id="btnMenu">
-          <span class="dots">⋮</span>
-        </button>
-      </div>
+      <!-- Force 2-line title like Lions -->
+      <h1>
+        Swiss Aid Connect<br>
+        Foundation
+      </h1>
     </div>
 
     <!-- Row 2: Join + Donate -->
@@ -747,9 +720,7 @@ footer.site-footer{
       <a class="btn btn-donate" href="#">Donate</a>
     </div>
 
-  </div>
-
-    <!-- Row 3: Three-dot Mobile Menu Button -->
+    <!-- Row 3: 3-Dot Mobile Menu Button (Lions Style) -->
     <div class="mobile-dots">
       <button class="dot-btn" id="btnMenu" aria-haspopup="true" aria-controls="mobileMenu" aria-expanded="false">
         <span class="dots">⋮</span>
@@ -758,7 +729,7 @@ footer.site-footer{
 
   </div>
 
-  <!-- Desktop Side Navigation -->
+  <!-- Desktop Side Navigation (unchanged) -->
   <div class="side-nav-container">
     <nav class="side-nav" role="navigation" aria-label="Main navigation">
       <a href="#">About Us</a>
