--- a/index.html
+++ b/index.html
@@ -722,6 +722,21 @@ footer.site-footer{
 }
 
 
+
+@media (max-width: 880px) {
+
+  .nav-actions a {
+    padding: 8px 0 !important; /* reduce button height */
+    font-size: 15px !important;
+    border-radius: 6px !important;
+  }
+
+  .btn {
+    padding: 0 !important; /* remove the desktop padding */
+  }
+}
+
+  
 </style>
 </head>
 <body>
