--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ footer.site-footer{
 }
 
 /* ======================================== */
-/* MOBILE HEADER — EXACTLY LIKE LIONS */
+/* MOBILE HEADER —  */
 /* ======================================== */
 @media (max-width:880px) {
 
@@ -671,7 +671,7 @@ footer.site-footer{
   }
 
   .brand img {
-    height: 52px;
+    height: 75px;
   }
 
   .brand h1 {
