--- a/index.html
+++ b/index.html
@@ -780,6 +780,13 @@ footer.site-footer{
     border-radius: 6px !important;
   }
 }
+.brand {
+  display: grid;
+  grid-template-columns: auto 1fr auto;  /* LEFT | MIDDLE | RIGHT */
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
 
 </style>
 </head>
